adding nav and title to index
html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>October Site</title>
 </head>
 <body>
-<nav></nav>    
+<nav>
+    <a href="home"><img src="logo.png"></a>
+    <a href="about-us">About US</a>
+    <a href="contact">Contact</a>
+</nav>    
 <h1>Welcome to the Spooky Season</h1>
+<!-- 
+    Create a nav menu with three links
+    Create a main paragraph with some text
+        does not have to be long
+    Create 3 images 
+    (HTML)
+-->
+
 
 <img class="extra-large" src="">
 <div id="container"></div>
