about us and contact created

--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="october colours.png" alt="cover img">
     <title>October Site</title>
 </head>
 <body>
 <nav>
-    <a href="home"><img src="logo.png"></a>
-    <a href="about-us">About US</a>
-    <a href="contact">Contact</a>
+    <a href="index.html"><img src="logo.png"></a>
+    <a href="about-us.html">About US</a>
+    <a href="contact.html">Contact</a>
 </nav>    
 <h1>Welcome to the Spooky Season</h1>
+<p>
+    This is a page for october, some people like it for the colours others like it for the holidays. Including the reading week.
+</p>
+<img src="extra-large.png" alt="halloween">
+
+
+<div id="container"></div>
+
+
+
+</body>
+</html>
 <!-- 
     Create a nav menu with three links
     Create a main paragraph with some text
@@ -19,9 +32,3 @@
     Create 3 images 
     (HTML)
 -->
-
-
-<img class="extra-large" src="">
-<div id="container"></div>
-</body>
-</html>
