--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <img src="october colours.png" alt="cover img">
     <title>October Site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav>
