notes about attributes
for instance CLASS

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <img src="october colours.png" alt="cover img">
     <title>October Site</title>
     <link rel="stylesheet" href="style.css">
+<!-- <link rel="stylesheet" href="style.css"> to link with css -->
 </head>
 <body>
 <nav>
-    <a href="index.html"><img src="logo.png"></a>
+<!-- href is an example of a HTML attribute -->
+<!-- tiago gets ignored because it is not a valid HTML attribute -->
+    <a href="index.html" tiago="HTML"><img src="logo.png"></a>
     <a href="about-us.html">About US</a>
     <a href="contact.html">Contact</a>
 </nav>    
@@ -17,7 +20,8 @@
 <p>
     This is a page for october, some people like it for the colours others like it for the holidays. Including the reading week.
 </p>
-<img src="extra-large.png" alt="halloween">
+<!-- an important attibute for ALL tags is the CLASS -->
+<img class="extra-large-img" src="halloween.png">
 
 
 <div id="container"></div>
