adding class=extra-large

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <a href="contact.html">Contact</a>
 </nav>    
 <h1>Welcome to the Spooky Season</h1>
-<p>
+<p class="extra-large">
     This is a page for october, some people like it for the colours others like it for the holidays. Including the reading week.
 </p>
 <!-- an important attibute for ALL tags is the CLASS -->
-<img class="extra-large-img" src="halloween.png">
+<img class="extra-large" src="halloween.png">
 
 
 <div id="container"></div>
