classes + ids added to index and about us

--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <a href="index.html" tiago="HTML"><img src="logo.png"></a>
     <a href="about-us.html">About US</a>
     <a href="contact.html">Contact</a>
+    <a href="#some-text">Some Text</a>
 </nav>    
 <h1>Welcome to the Spooky Season</h1>
-<p>
+<p class="extra-large">
     This is a page for october, some people like it for the colours others like it for the holidays. Including the reading week.
 </p>
 <!-- an important attibute for ALL tags is the CLASS -->
 <img class="extra-large" src="halloween.png">
+<p id="some-text">
+    This is some text
+</p>
+<p class="extra-large">
+    This is another sentence
+</p>
+
 
 
 <div id="container"></div>
