--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,14 @@
     <title>About Us</title>
 </head>
 <body>
+    <nav>
+        <!-- href is an example of a HTML attribute -->
+        <!-- tiago gets ignored because it is not a valid HTML attribute -->
+            <a href="index.html" tiago="HTML"><img src="logo.png"></a>
+            <a href="about-us.html">About US</a>
+            <a href="contact.html">Contact</a>
+            <a href="index.html#some-text">Some Text</a>
+        </nav>    
     <h1>About Us</h1>
     
 </body>
