styling css and creating some new ids

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- href is an example of a HTML attribute -->
 <!-- tiago gets ignored because it is not a valid HTML attribute -->
     <a href="index.html" tiago="HTML"><img src="logo.png"></a>
-    <a href="about-us.html">About US</a>
+    <a id="about" href="about-us.html">About US</a>
     <a href="contact.html">Contact</a>
     <a href="#some-text">Some Text</a>
 </nav>    
